// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders CheckboxGroup correctly with defaultValue 1`] = `
<div
  class="zw-checkbox-group"
>
  <label
    class="zw-checkbox zw-checkbox--checked"
  >
    <input
      checked=""
      class="zw-checkbox__input"
      type="checkbox"
      value="a"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      A
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="b"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      B
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="c"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      C
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="d"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      D
    </span>
  </label>
</div>
`;

exports[`Checkbox renders disabled Checkbox correctly 1`] = `
<label
  class="zw-checkbox zw-checkbox--disabled zw-checkbox--checked"
>
  <input
    checked=""
    class="zw-checkbox__input"
    disabled=""
    type="checkbox"
    value="0"
  />
  <span
    class="zw-checkbox__inner"
  />
  <span
    class="zw-checkbox__children"
  >
    选择0
  </span>
</label>
`;

exports[`Checkbox renders disabled CheckboxGroup correctly 1`] = `
<div
  class="zw-checkbox-group"
>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="a"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      A
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="b"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      B
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="c"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      C
    </span>
  </label>
  <label
    class="zw-checkbox"
  >
    <input
      class="zw-checkbox__input"
      type="checkbox"
      value="d"
    />
    <span
      class="zw-checkbox__inner"
    />
    <span
      class="zw-checkbox__children"
    >
      D
    </span>
  </label>
</div>
`;

exports[`Checkbox renders indeterminate Checkbox correctly 1`] = `
<label
  class="zw-checkbox zw-checkbox--indeterminate"
>
  <input
    class="zw-checkbox__input"
    type="checkbox"
    value="0"
  />
  <span
    class="zw-checkbox__inner"
  />
  <span
    class="zw-checkbox__children"
  >
    选择0
  </span>
</label>
`;

exports[`Checkbox renders normal Checkbox correctly 1`] = `
<label
  class="zw-checkbox zw-checkbox--checked"
>
  <input
    checked=""
    class="zw-checkbox__input"
    type="checkbox"
    value="0"
  />
  <span
    class="zw-checkbox__inner"
  />
  <span
    class="zw-checkbox__children"
  >
    选择0
  </span>
</label>
`;
